Made URLFetchers use URI instead of URL